[tool.poetry]
name = "webhook-seminaire"
version = "0.1.0"
description = ""
authors = ["Ayoub BOUNAGA <a.bounaga@dental-monitoring.com>"]
readme = "README.md"
packages = [{include = "webhook_seminaire"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pyngrok = "^7.2.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
