[tool.poetry]
name = "webhooks_secret_agent"
version = "0.1.0"
description = ""
authors = ["Ayoub BOUNAGA <ayoubebounaga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pyngrok = "^7.2.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
